@@ -14,6 +14,7 @@
 	</parent>
 
 	<properties>
+		<java.version>17</java.version>
 		<asmVersion>9.3</asmVersion>
 	</properties>
 
@@ -55,7 +56,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
